# m-look

./: .env.example  .gitignore  .gitmodules  docker-compose.yaml
backend/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/api/: base_crud.py  dependencies.py
backend/api/auth/: __init__.py  dependency.py  endpoint.py  schemas.py  utils.py
backend/api/product/: __init__.py  endpoint.py  product_service.py  schemas.py
backend/api/user/: __init__.py  endpoint.py  schemas.py  user_service.py
backend/core/: config.py  dependency.py  enums.py  protected_route.py
backend/core/certs/: jwt-private.pem  jwt-public.pem
backend/core/security/: hashing.py  jwt.py  protect_route.py  utils.py
backend/database/: session.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_12_15_1251_all.py
backend/models/: __init__.py  coupon.py  mixin.py  product.py  user.py
backend/utils/: save_image.py  set_cookie.py  utils.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/profile/: layout.tsx  page.tsx
frontend/src/components/: activation.tsx
frontend/src/components/common/: _.ts  dialog.tsx  (+5 more)
frontend/src/services/: api.service.ts  auth.service.ts  product.service.ts  user.service.ts
frontend/src/store/: authStore.ts  cartStore.ts  profileStore.ts  wishListStore.tsx
frontend/src/types/: mixin.ts  product.ts  user.ts
frontend/src/utils/: axios.ts  const.ts
(+49 files in other folders)
