[tool.poetry]
name = "m-look"
version = "0.1.0"
description = "E-commerce about sneakers, bags, belt"
authors = ["hojiakbar2806 <hojiakbarnasriddinov2006@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
alembic = "^1.13.3"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.20.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
greenlet = "^3.1.1"
cryptography = "^43.0.3"
starlette = "^0.41.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
